# petpals-backoffice

./: README.md  azure-build-pipeline.yml  azure-deploy-pipeline.yml  azure-pipelines-1.yml  azure-pipelines.yml
.github/workflows/: azure-staticwebapp.yml
front/: .gitignore  README.md  angular.json  karma.conf.js  package-lock.json  package.json
front/src/: index.html
front/src/app/: app.component.css  app.component.html  app.component.spec.ts  app.component.ts  inter.ts
front/src/app/create-caregiver/: create-caregiver.component.css  create-caregiver.component.html  create-caregiver.component.spec.ts  create-caregiver.component.ts
front/src/app/environments/: environment.development.ts  environment.local.ts  environment.ts
front/src/app/stores/: app.state.ts
petpals/: .gitignore  angular.json  karma.conf.js  package-lock.json  package.json  tailwind.config.js
petpals/.scannerwork/: report-task.txt
petpals/junit-report/: junit.xml
petpals/src/: index.html  main.ts  styles.css
petpals/src-tauri/: .env  Cargo.toml  tauri.conf.json
petpals/src-tauri/icons/: icon.icns
petpals/src-tauri/src/: main.rs
petpals/src-tauri/src/models/: create_caregiver.rs  create_owner.rs  mod.rs  species.rs  tauri_response.rs
petpals/src/app/: app.component.css  app.component.html  app.component.spec.ts  app.component.ts  app.config.ts  app.routes.ts  is-tauri-guard.ts
petpals/src/tests/: app.component.spec.ts  app.state.spec.ts  create-caregiver.component.spec.ts  create-owner.component.spec.ts  location.component.spec.ts  tauri.component.spec.ts
(+59 files in other folders)
