[package]
name = "petpals-p"
version = "0.1.0"
description = "A Tauri App"
authors = ["From-pets-to-pals", "FlowerInTheRain"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
dotenv = "0.15.0"
reqwest = "0.11.27"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "1.6.0", features = [ "http-all", "window-all", "shell-open"] }
lazy_static = "1.4.0"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
